--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "fs-extra": "^11.3.0",
+    "highlight.js": "^11.11.1",
     "markdown-it": "^14.1.0",
+    "markdown-it-highlightjs": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
