--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "fs-extra": "^11.3.0",
     "highlight.js": "^11.11.1",
     "markdown-it": "^14.1.0",
